--- a/U5kManServer/appweb/index.html
+++ b/U5kManServer/appweb/index.html
@@ -54,8 +54,15 @@
                 <li>
                     <a href="" data-ng-click="ctrl.about()" translate>Acerca de...</a>
                 </li>
-                <li ng-show="ctrl.retorno()">
-                    <a href="" data-ng-click="ctrl.retorna()" translate>INDEX_OPC_VOLVER</a>
+                <li><br /></li>
+                <li><br /></li>
+                <li>
+                    <form method="POST" action="/logout">
+                        <div>
+                            <!-- Submit Button -->
+                            <input type="submit" class="btn btn-default" style="width: 100%;" value="Logout" />
+                        </div>
+                    </form>
                 </li>
             </ul>
         </nav>
