--- a/U5kManServer/appweb/login.html
+++ b/U5kManServer/appweb/login.html
@@ -30,23 +30,23 @@
                 <div class="modal-body">
                     <form class="form-horizontal" role="form" method="POST" action="/login.html">
                         <div class="form-group">
-                            <label class="control-label col-sm-4">Usuario:</label>
+                            <label class="control-label col-sm-4" style="text-align:left;">Usuario:</label>
                             <div class="col-sm-8">
                                 <input type="text" class="form-control" name="username" placeholder="Introduzca Usuario" />
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-sm-4">Password:</label>
+                            <label class="control-label col-sm-4" style="text-align:left;">Password:</label>
                             <div class="col-sm-8">
                                 <input type="password" class="form-control" name="password" placeholder="Introduzca password" />
                             </div>
                         </div>
-                        <div class="form-group" style="text-align:center; color:red;">
+                        <div class="form-group" style="text-align:center; color:red; font-size:120%;">
                             <div id='result'></div>
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-default">Login</button>
+                                <button type="submit" class="btn btn-default" style="float:right">Login</button>
                             </div>
                         </div>
                     </form>
