262. Retoques en la gestion REST y el LOGIN.

--- a/U5kManServer/appweb/login.html
+++ b/U5kManServer/appweb/login.html
@@ -123,7 +123,7 @@
                             { "data": "inci", "width": "85%", "class": "text-left", "render": (data) => data },
                         ],
                         dom: "<'row'<'col-md-12 small text-info'tr>>" +
-                            "<'row'<'col-md-5'><'col-md-7'p>>",
+                            "<'row '<'col-md-8'><'col-md-4 text-right'p>>",
                         language: {
                             "decimal": "",
                             "emptyTable": "No hay datos disponibles",
